# math-camp-synth

./: .gitignore  README.md
2022 Version/: code.py
2022 Version/ext_amp/: ext_amp.kicad_pcb  ext_amp.kicad_sch  fp-info-cache
2022 Version/ext_amp/gerbers/: ext_amp-B_Cu.gbl  ext_amp-B_Mask.gbs  ext_amp-B_Paste.gbp  ext_amp-B_Silkscreen.gbo  ext_amp-Edge_Cuts.gm1  ext_amp-F_Cu.gtl  ext_amp-F_Mask.gts  ext_amp-F_Paste.gtp  ext_amp-F_Silkscreen.gto  ext_amp-NPTH-drl_map.gbr  ext_amp-NPTH.drl  ext_amp-PTH-drl_map.gbr  ext_amp-PTH.drl
2022 Version/pwr/: fp-info-cache  pwr2.kicad_prl
2022 Version/pwr/gerbers/: pwr2-B_Cu.gbl  pwr2-B_Mask.gbs  pwr2-B_Paste.gbp  pwr2-B_Silkscreen.gbo  pwr2-Edge_Cuts.gm1  pwr2-F_Cu.gtl  pwr2-F_Mask.gts  pwr2-F_Paste.gtp  pwr2-F_Silkscreen.gto  pwr2-NPTH-drl_map.gbr  pwr2-NPTH.drl  pwr2-PTH-drl_map.gbr  (+1 more)
2022 Version/sen/: fp-info-cache  sen.kicad_pcb  sen.kicad_prl  sen.kicad_pro  sen.kicad_sch
2022 Version/sen-fp/: sen-fp.kicad_pcb  sen-fp.kicad_prl  sen-fp.kicad_pro
2022 Version/strain_guage/: strain_gauge.step  strain_guage-top-pos.csv  strain_guage.kicad_pcb  strain_guage.kicad_prl
2022 Version/synth/: synth.kicad_pcb  synth.kicad_pro  synth.kicad_sch
2022 Version/synth-fp/: synth2-fp.kicad_pro
2022-Pendulum/software/: hx711_gpio.py
2023-Jukebox/software/: AudioChain.h  Globals.h  OledMenu.cpp
2024-Jukebox/software/firmware/src/uiboard/: CMakeLists.txt  MAX7313.c  MAX7313.h  e131.c  e131.h  lcd_display.c  lcd_display.h  uiboard.c  usb_descriptors.c  w5x00_spi.c
2025-Jukebox/software/: I2SSampler.cpp  I2SSampler.h
(+442 files in other folders)
